--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- <link rel="icon" href="./favicon.ico" sizes="any"> -->
 </head>
 <body>
-  <div id="warning">端末が縦向きかまたは対応してない可能性があります。</div>
+  <div id="warning" class="hide">端末が縦向きかまたは対応してない可能性があります。</div>
   <div id="wrapper">
     <div class="side-container">
       <div class="buttons-container" style="height: 100%;max-height: 200px;flex-wrap: wrap;">
